--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+// bd_login
 spring.jpa.database=POSTGRESQL
 spring.datasource.plataform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/bd_login
+spring.datasource.url=jdbc:postgresql://localhost:5432/bd_juego-preguntas
 spring.datasource.username=postgres
 spring.datasource.password=mauricio29
 spring.jpa.show-sql=true
